# lib/db/src/schema/users.ts
@@ -1,0 +1,14 @@
+import { pgTable, text } from "drizzle-orm/pg-core";
+import { createInsertSchema } from "drizzle-zod";
+import { z } from "zod/v4";
+
+export const usersTable = pgTable("users", {
+  id: text("id").primaryKey(),
+  universityId: text("university_id").notNull(),
+  branch: text("branch").notNull(),
+  year: text("year").notNull(),
+});
+
+export const insertUserSchema = createInsertSchema(usersTable);
+export type InsertUser = z.infer<typeof insertUserSchema>;
+export type User = typeof usersTable.$inferSelect;
